@@ -1,0 +1,3 @@
+prog: mpx
+prereq: test -x mpx
+vgopts: -q
